src/objects/Child__c.object
<CustomObject>
    <fields>
        <fullName>Ammount__c</fullName>
        <label>Ammount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <label>Master</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>Childs</relationshipLabel>
        <relationshipName>Childs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Parent__c</referenceTo>
        <relationshipLabel>Childs</relationshipLabel>
        <relationshipName>Childs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Child</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Childs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>